--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 07 22:25:41 ICT 2020
-sdk.dir=/Users/danhdueexoictif/Library/Android/sdk
+#Wed Sep 16 07:36:53 ICT 2020
+sdk.dir=/home/dao.danh.due/Android/Sdk
